export class CreateCoworkingspaceDto {
  readonly name: string;
  readonly address: string;
  readonly tel: string;
  readonly email: string;
  readonly openTime: string;
  readonly closeTime: string;
  readonly num_rooms: number;
  // readonly num_booked: number;
}
